# depthai-core-example

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/engine/: CameraController.cpp  CameraController.h  EngineManager.cpp  EngineManager.h  ModuleBase.h  Types.h
src/modules/: EngineManager.cpp  EngineManager.hpp  InferenceModule.cpp  InferenceModule.h  PreviewModule.cpp  PreviewModule.h  RecordModule.cpp  RecordModule.h
